--- a/index.html
+++ b/index.html
@@ -23,8 +23,7 @@
 		</div>
 	</section>
 
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.19.0/axios.min.js"
-		integrity="sha256-S1J4GVHHDMiirir9qsXWc8ZWw74PHHafpsHp5PXtjTs=" crossorigin="anonymous"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.19.0/axios.min.js" integrity="sha256-S1J4GVHHDMiirir9qsXWc8ZWw74PHHafpsHp5PXtjTs=" crossorigin="anonymous"></script>
 
 	<script>
 		function fetchSimpsonsJSON() {
@@ -37,14 +36,14 @@
 					return response.data;
 				})
                 
-				.then(function (simpsons) {
-					console.log('data decoded from JSON:', simpsons[0]);
-					const simpsonsHtml = `
-					<p><strong>${simpsons[0].character}</strong></p>
-					<img src="${simpsons[0].image}" />
-					<div>${simpsons[0].quote}</div>
+				.then(function (simpsonQuote) {
+					console.log('data decoded from JSON:', simpsonQuote[0]);
+					const simpsonQuoteHtml = `
+					<p><strong>${simpsonQuote[0].character}</strong></p>
+					<img src="${simpsonQuote[0].image}" />
+					<div>${simpsonQuote[0].quote}</div>
 					`;
-					document.querySelector('#simpsons').innerHTML = simpsonsHtml;
+					document.querySelector('#simpsonQuote').innerHTML = simpsonQuoteHtml;
 				});
 		}
 
